--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
  
-h1 {
-	color:  #000000;
-}
+
 #banner {
-	width: 80%;
+	display: inline-block;
+	width: 100%;
 }
+
+#dolado {
+	color:  #FF0000;
+	text-align: center;
+	font-size: 50px;
+}
+
 strong em {
 	color: #000000;
+}
+strong em {
+	color: darkred;
+}
+h1 {
+	color: #FF0000
 }
